# rock-mass-variability-analysis

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  requirements.txt  rock_mass_variability_analysis.py  tauri.conf.json
.github/workflows/: build.yml
assets/: entitlements.mac.plist
scripts/: generate-icons.js  installer.nsh  setup-python.js
src/: loading.html  main.js  preload.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
