[package]
name    = "rock-mass-variability-analysis"
version     = "2.0.0"
edition = "2021"
description = "Rock Mass Variability Analysis — Monte Carlo Simulation Desktop App"
authors     = ["Rock Mass Variability Analysis"]
license     = "MIT"

# Prevents console window on Windows in release
[[bin]]
name              = "rock-mass-variability-analysis"
path              = "src/main.rs"
default-run       = "rock-mass-variability-analysis"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri  = { version = "2.0.0-rc", features = ["shell-open"] }
open   = "5"
serde  = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic    = "abort"
codegen-units = 1
lto      = true
opt-level = "s"
strip    = true
